<resources>
    <string name="app_name">Menu</string>
    <!-- TODO: Remove or change this plSaceholder text -->
    <string name="Open">Open</string>
    <string name="Close">Close</string>S
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="galeria">Galeria</string>
    <string name="zapraszamy_do_obejrzenia_zdj_z_naszego_lokalu">Zapraszamy do obejrzenia zdjęć z naszego \n lokalu</string>
    <string name="string">___________________________________________</string>
    <string name="odwied_nasz_profil">Odwiedź nasz profil</string>
    <string name="kontakt">Kontakt</string>
    <string name="adres">DARA KEBAB \n35-064 Rzeszów \nul.Grunwaldzka \n24 17-853-87-97</string>
    <string name="email">kontakt@darakebab.pl</string>
    <string name="menu">Menu</string>
    <string name="menuText">Przed złożeniem zamówienia sprawdź czy \ndowozimy jedzenie w twojej okolicy</string>
    <string name="TV_TextViewMenu6">Kurczak/11.00 PLN   Wołowina/12.00 PLN \n Mieszane/12.00 PLN</string>
    <string name="TV_TextViewMenu7">Kurczak/16.00 PLN   Wołowina/17.00 PLN \n Mieszane/17.00 PLN</string>
    <string name="TV_TextViewMenu8">Kurczak/16.00 PLN   Wołowina/17.00 PLN \n Mieszane/17.00 PLN</string>
    <string name="TV_TextViewMenu9">Kurczak/22.00 PLN   Wołowina/23.00 PLN \n Mieszane/23.00 PLN</string>
    <string name="kontaktText">Podaj swoje dane a następnie wypełnij formularz jeśli chcesz się z nami skontaktować</string>
    <string name="BT_ButtonKontakt1">Wyślij formularz</string>
    <string name="kup">Dodaj</string>
    <string name="kup1">Dodaj</string>
    <string name="_1_darollo">1. DAROLLO</string>
    <string name="_1">0</string>
    <string name="kebab_w_cie_cie">Kebab w cieście</string>
    <string name="_2_doner_darollo">2. DONER DAROLLO</string>
    <string name="wrapy">Wrapy</string>
    <string name="_2_studencki_w_cie_cie">2. STUDENCKI W CIEŚCIE</string>
    <string name="_1_1">0</string>
    <string name="kup2">Dodaj</string>
    <string name="_1_mini_w_cie_cie">1. MINI W CIEŚCIE</string>
    <string name="_1_2">0</string>
    <string name="_1_3">0</string>
    <string name="kup_3">Dodaj</string>
    <string name="kup_4">Kup</string>
    <string name="email1">Email</string>
    <string name="imi_i_nazwisko">Imię i Nazwisko</string>
    <string-array name="kebabs_mini">
        <item>Kurczak</item>
        <item>Wołowina</item>
        <item>Mieszany</item>
    </string-array>
    <string-array name="kebabs_studencki">
        <item>Kurczak</item>
        <item>Wołowina</item>
        <item>Mieszany</item>
    </string-array>
    <string-array name="kebabs_darollo">
        <item>Kurczak</item>
        <item>Wołowina</item>
        <item>Mieszany</item>
    </string-array>
    <string-array name="kebabs_doner">
        <item>Kurczak</item>
        <item>Wołowina</item>
        <item>Mieszany</item>
    </string-array>
</resources>