<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_y="50dp"
    android:background="@color/white"
    tools:context=".o_nas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_TextViewKontakt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/galeria"
                    android:textColor="#000000"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/TV_TextViewKontakt2"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:letterSpacing="@dimen/material_emphasis_disabled_background"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/zapraszamy_do_obejrzenia_zdj_z_naszego_lokalu"
                    android:textColor="#393636" />

                <TextView
                    android:id="@+id/TV_TextViewKontakt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/string"
                    android:textColor="#FF9800"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IV_ImageViewGaleria1"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:src="@drawable/j1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IV_ImageViewGaleria2"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:src="@drawable/j5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IV_ImageViewGaleria3"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:src="@drawable/j6" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/IV_ImageViewGaleria4"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_gravity="center"
                    android:src="@drawable/j4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TV_TextViewGaleria4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/odwied_nasz_profil"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/IB_ImageButtonGaleria1"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fblogo"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/TV_TextViewGaleria5"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kontakt"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TV_TextViewGaleria7"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/cardview_default_elevation"
                    android:lineSpacingExtra="1sp"
                    android:text="@string/adres"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/TV_TextViewGaleria6"
                    android:layout_width="350dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>